Changelog
=========


1.6 (unreleased)
----------------

- Implement new ``importProfile`` directive for creating upgrade steps
  that just import a specific upgrade step generic setup profile.
  [jone]


1.5 (2013-08-16)
----------------

- Add a ``WorkflowChainUpdater`` for changing workflow chains without
  resetting existing objects to the initial review state of the new
  workflow.
  [jone]


1.4.0 (2013-07-18)
------------------

- Added helper for adding a type_action.
  [phgross]

- Add `objects` method to `UpgradeStep` for easy querying the catalog
  and doing stuff with progress logging combined.
  [jone]

- Make ProgressLogger an iterator too, because it is easier to use.
  [jone]

- Improve logging while installing upgrade steps.
  Show duration for installing.
  [jone]

- Fix upgrade step icons for Plone 4.3.
  [jone]

- Add ``update_security`` helper.
  [jone]

- Fix incomplete status info entry prodcued by
  placeful workflow policy activator.
  [jone]


1.3 (2013-06-13)
----------------

- Implement a placeful workflow policy activator.
  [jone]

- Added remove_broken_browserlayer method to step class.
  [lgraf]


1.2.1 (2013-04-23)
------------------

- Keep modification date on reindexObject wihtout idxs.
  [mathias.leimgruber]

1.2 (2013-01-24)
----------------

- onegov.ch approved: add badge to readme.
  [jone]

- Remove 'step' and 'for' values from internal data structure.
  This is needed for allowing us to serialize the data (json).
  [jone]

- Add IPostUpgrade adapter hook.
  [jone]

- Refactor dependency sorting into seperate function.
  [jone]

- Add security declarations.
  [jone]

- Fix wrong tool usage when installing a profile in step class.
  [jone]


1.1 (2012-10-08)
----------------

- Add catalog_unrestricted_get_object and catalog_unrestricted_search methods to step class.
  [jone]

- Handle profiles of packages which were removed but have leftover generic setup entries.
  [jone]


1.0 (2012-08-13)
----------------
